@@ -1,5 +1,6 @@
 Version 2.02.74 - 
 ==================================
+  Fix pvmove --abort to remove even for empty pvmove LV.
   Add configure --with-default-data-alignment.
   Update heuristic used for default and detected data alignment.
   Add "devices/default_data_alignment" to lvm.conf.
